--- a/01-basics/01-CounterButton/index.html
+++ b/01-basics/01-CounterButton/index.html
@@ -15,6 +15,6 @@
   </button>
 </div>
 
-<script type="module" src="01-CounterButton/script.js"></script>
+<script type="module" src="script.js"></script>
 </body>
 </html>
