--- a/01-basics/02-MeetupPageDraft/index.html
+++ b/01-basics/02-MeetupPageDraft/index.html
@@ -24,13 +24,14 @@
           <h3>Программа</h3>
           <div class="meetup-agenda">
             <p v-if="meetup.agenda.length<=-1" class="meetup-agenda__empty">Программа пока пуста, но когда-нибудь в ней обязательно что-нибудь появится!</p>
-            <div v-else v-for="item in meetup.agenda" class="meetup-agenda__item">
+
+            <div v-else v-for="item in agendas" class="meetup-agenda__item">
               <div class="meetup-agenda__item-col">
-                <img class="icon" alt="icon" :src="`/assets/icons/icon-${agendaIcon(item)}.svg`" />
+                <img class="icon" alt="icon" :src="`/assets/icons/icon-${item.icon}.svg`" />
               </div>
               <div class="meetup-agenda__item-col">{{ item.startsAt }} - {{ item.endsAt }}</div>
               <div class="meetup-agenda__item-col">
-                <h5 class="meetup-agenda__title">{{ agendaTitles(item) }}</h5>
+                <h5 class="meetup-agenda__title">{{ item.title  }}</h5>
                 <p v-if="item.type !== 'registration' && item.speaker">
                   <span>{{ item.speaker }}</span>
                   <span class="meetup-agenda__dot"></span>
