--- a/02-components/02-MeetupPageComponent/index.html
+++ b/02-components/02-MeetupPageComponent/index.html
@@ -7,10 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/assets/styles/index.css">
   <title>MeetupPageComponent</title>
+  <link rel="shortcut icon" href="/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
-<div id="app"></div>
+<div id="app" v-cloak>
+  <meetup-page></meetup-page>
+</div>
 
 <script type="module">
   import Vue from './vue.esm.browser.js';
